web: fix button problem on IE; from Christian

--- a/html/ops/main.css
+++ b/html/ops/main.css
@@ -350,7 +350,6 @@ img.flag {
 
 .authorcol .btn {
     font-size: 12px;
-    margin: 0 4px;
     line-height: 2.6em;
 }
 
